--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.css";
+@import "~datatables.net-dt/css/jquery.dataTables.css";
+@import "~animate.css/animate.css";
+body {
+    padding-bottom: 50px;
+    padding-Top: 80px;
+}
